# uk-1c-skills

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.agents/skills/ua-1c-platform-compat/: SKILL.md
.github/workflows/: ci.yml  upstream-check.yml
configs/: agents.yaml  build.yaml  platform_versions_ua.yaml
docs/: AGENTS.md  ARCHITECTURE.md  MIGRATION.md  PLATFORM_VERSIONS_UA.md  UPSTREAM_ANALYSIS.md  UPSTREAM_SYNC.md
overlays/: README.md  manifest.yaml
overlays/docs/: ua-adaptation-notes.md
overlays/root/: UKRAINIAN_LAYER.md
overlays/skills/ua-configurationxml-features/: SKILL.md
patches/: 0001-universal-agent-paths.patch  0002-ua-platform-version-rules.patch  README.md
tests/: conftest.py  test_agent_outputs.py  test_configuration_xml_features.py  test_generated_type_validation.py  test_platform_resolver.py
upstream/: README.md
